# iq_use_your_head

./: README.md  main.py  pyproject.toml
notebooks/: anywidget_test.py  marimo.py  mario.py  maup.py  slider.py  text.py
src/use_your_head/: __main__.py  cli.py  dancing_links.py  iq_use_your_head.py  main.py  n_queen.py
src/widgets/: matrix.css  matrix.js  matrix.py
tests/: test_dancing_links.py
tests/fixtures/: exact_cover_2x2_16sol.yaml  exact_cover_2x2_4sol.yaml  iq_use_your_head.py  queens_13.yaml  queens_14.yaml  queens_15.yaml  queens_4.yaml  queens_5.yaml  queens_8.yaml
